Closed Bug 463182 Opened 16 years ago Closed 16 years ago

Can not build tamarin-redux on solaris with Sun compiler.

Categories

(Tamarin Graveyard :: Build Config, defect)

Sun
Solaris
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: leon.sha, Assigned: leon.sha)

Details

Attachments

(1 file, 1 obsolete file)

[leon.sha@homerun debug]$ ../configure.py Traceback (most recent call last): File "../configure.py", line 136, in ? raise Exception('Unrecognized compiler: ' + config.getCompiler()) Exception: Unrecognized compiler: SunStudio Also there will be other build problems after fixing that problem.
Attached patch patch (obsolete) — Splinter Review
There are several fixes inside this patch. - Fix several build problem on solaris. - Use unixbuild.h to replace linuxbuild.h and solarisbuild.h. Use GCSpinLockUnix.h to replace GCSpinLockLinux.h and GCSpinLockSolaris.h
Assignee: nobody → leon.sha
Status: NEW → ASSIGNED
Attachment #346413 - Flags: review?(stejohns)
Attached patch patch_v2Splinter Review
Updated patch to fix more release build problem.
Attachment #346413 - Attachment is obsolete: true
Attachment #346421 - Flags: review?(stejohns)
Attachment #346413 - Flags: review?(stejohns)
Comment on attachment 346421 [details] [diff] [review] patch_v2 looks good. have you tested the changes on linux to ensure that still works?
Attachment #346421 - Flags: review?(stejohns) → review+
(In reply to comment #3) > (From update of attachment 346421 [details] [diff] [review]) > looks good. have you tested the changes on linux to ensure that still works? Yes I tested on linux. I'll check build-bot later.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: