 Bug 463182 -  Can not build tamarin-redux on solaris with Sun compiler. stejohns: review+