shell/avmshell.cpp
@@ -45,6 +45,7 @@
 
 #if defined(SOLARIS)
 #include <signal.h>
+#include <unistd.h>
 #include <ucontext.h>
 extern "C" greg_t _getsp(void);
 #endif
